--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "npm install && node index.js"
+    "start": "npm install && node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongodb": "6.4",
+    "mongodb": "^6.7.0",
     "nodemon": "^3.1.0",
     "short-uuid": "^5.2.0"
   }
